src/objects/Clinic__c.object
<CustomObject>
    <description>This object will store available Clinics available for selection on Patient Referrals.</description>
    <fields>
        <fullName>Clinic_Budgets__c</fullName>
        <label># Clinic Budgets</label>
        <summaryFilterItems>
            <field>Clinic_Budget__c.Budget_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Clinic_Budget__c.Clinic__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Budget_2020__c</fullName>
        <label>Total Budget 2020</label>
        <summarizedField>Clinic_Budget__c.Clinic_Month_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Clinic_Budget__c.Budget_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Clinic_Budget__c.Budget_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Clinic_Budget__c.Clinic__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Clinic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clinic__c</columns>
        <columns>Clinic_Budgets__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Clinic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>